0.3.8-SNAPSHOT
-----
- Ledger Allocation
- BKLogPartitionWriteHandler optimizations

0.3.7
-----
- New bookkeeper release
- Async getLastDLSN
- Fix for non blocking readers
- Changes from master upto 0.2.12 

0.3.6
-----
- Expose DistributedLog Client Builder in Proxy Builder                                                      

0.2.12
------
- Eliminate redundant repositioning at the legder boundary
- getWithWait should fetch entries without wait if they are before the read ahead point
- Optimize resume and eliminate redundant object creation
- Add an option to disable record counts

0.2.11
------
- Allow specifying the number of threads used by BookKeeper Client
- Share Channel Socket Factory
- Fix the handling of the watch on resume
- Require calls in the Reader to be synchronized

0.2.10
------
- Diagnostics and IllegalState Exception
- Non Blocking Reads
- Handle Read Ahead cache full
- Exit Read Ahead after non-retryable error
- Remove redundant ZK access in resumable reader 

0.2.9
-----
- Exclude Control Log Records from getLastTxId
- Add new method getLastLogRecord
- Add support to count the number of log records in the stream
- Propagate InterruptedException to the client
- ZK Client Fixes
