@@ -1,11 +1,15 @@
 package com.twitter.distributedlog.metadata;
 
+import com.google.common.annotations.VisibleForTesting;
+import com.twitter.distributedlog.DistributedLogConfiguration;
 import com.twitter.distributedlog.ZooKeeperClient;
 import com.twitter.distributedlog.thrift.BKDLConfigFormat;
 import org.apache.thrift.TException;
 import org.apache.thrift.protocol.TJSONProtocol;
 import org.apache.thrift.transport.TMemoryBuffer;
 import org.apache.thrift.transport.TMemoryInputTransport;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
@@ -20,9 +24,16 @@ import static com.google.common.base.Charsets.UTF_8;
  */
 public class BKDLConfig implements DLConfig {
 
+    private static final Logger LOG = LoggerFactory.getLogger(BKDLConfig.class);
+
     private static final int BUFFER_SIZE = 4096;
     private static final ConcurrentMap<URI, DLConfig> cachedDLConfigs =
             new ConcurrentHashMap<URI, DLConfig>();
+
+    public static void propagateConfiguration(BKDLConfig bkdlConfig, DistributedLogConfiguration dlConf) {
+        dlConf.setSanityCheckTxnID(bkdlConfig.getSanityCheckTxnID());
+        LOG.info("Propagate BKDLConfig to DLConfig : sanityCheckTxnID = {}.", dlConf.getSanityCheckTxnID());
+    }
 
     public static BKDLConfig resolveDLConfig(ZooKeeperClient zkc, URI uri) throws IOException {
         DLConfig dlConfig = cachedDLConfigs.get(uri);
@@ -37,8 +48,14 @@ public class BKDLConfig implements DLConfig {
         return (BKDLConfig)dlConfig;
     }
 
+    @VisibleForTesting
+    public static void clearCachedDLConfigs() {
+        cachedDLConfigs.clear();
+    }
+
     private String zkServers;
     private String bkLedgersPath;
+    private boolean sanityCheckTxnID = true;
 
     /**
      * Construct a empty config.
@@ -66,6 +83,25 @@ public class BKDLConfig implements DLConfig {
         return bkLedgersPath;
     }
 
+    /**
+     * Enable/Disable sanity check txn id.
+     *
+     * @param enabled
+     *          flag to enable/disable sanity check txn id.
+     * @return bk dl config.
+     */
+    public BKDLConfig setSanityCheckTxnID(boolean enabled) {
+        this.sanityCheckTxnID = enabled;
+        return this;
+    }
+
+    /**
+     * @return flag to sanity check highest txn id.
+     */
+    public boolean getSanityCheckTxnID() {
+        return sanityCheckTxnID;
+    }
+
     @Override
     public int hashCode() {
         return (null == zkServers ? 0 : zkServers.hashCode()) * 13 +
@@ -88,10 +124,11 @@ public class BKDLConfig implements DLConfig {
             return false;
         }
         if (bkLedgersPath == null) {
-            return another.bkLedgersPath == null;
+            res = another.bkLedgersPath == null;
         } else {
             return bkLedgersPath.equals(another.bkLedgersPath);
         }
+        return res && sanityCheckTxnID == another.sanityCheckTxnID;
     }
 
     @Override
@@ -108,6 +145,7 @@ public class BKDLConfig implements DLConfig {
         if (null != bkLedgersPath) {
             configFormat.setBkLedgersPath(bkLedgersPath);
         }
+        configFormat.setSanityCheckTxnID(sanityCheckTxnID);
         TMemoryBuffer transport = new TMemoryBuffer(BUFFER_SIZE);
         TJSONProtocol protocol = new TJSONProtocol(transport);
         try {
@@ -137,6 +175,9 @@ public class BKDLConfig implements DLConfig {
         }
         if (configFormat.isSetBkLedgersPath()) {
             bkLedgersPath = configFormat.getBkLedgersPath();
+        }
+        if (configFormat.isSetSanityCheckTxnID()) {
+            sanityCheckTxnID = configFormat.isSanityCheckTxnID();
         }
     }
 }
