@@ -3,4 +3,5 @@ namespace java com.twitter.distributedlog.thrift
 struct BKDLConfigFormat {
     1: optional string bkZkServers
     2: optional string bkLedgersPath
+    3: optional bool sanityCheckTxnID
 }
